# economic-growth-models

./: .gitignore  LICENSE.md  README.md  pyproject.toml
notebooks/: basic_gdp_model.ipynb  supply_and_demand.ipynb
src/: plots.py
