[project]
name = "economic-growth-models"
version = "0.1.0"
description = ""
authors = [
    { name = "Vincent Lonij", email = "29819815+vincentropy@users.noreply.github.com" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jupyter (>=1.1.1,<2.0.0)", "matplotlib (>=3.10.8,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
